Archive2/ee/f829fca1c82a05/output
main.cpp:18:13: error: reference to 'A' is ambiguous
        new A();
            ^
main.cpp:9:7: note: candidate found by name lookup is 'A'
class A { };
      ^
main.cpp:11:23: note: candidate found by name lookup is 'Foo::A'
namespace Foo { class A { }; };
                      ^
1 error generated.
